# easysocks

./: Cargo.toml  Dockerfile  README.md  docker-bake.hcl  docker-compose.yml  users.csv
.github/workflows/: rust.yml
src/: main.rs  server.rs  socks5.rs
