[package]
name = "easysocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
clap-num = "1.0.2"
thiserror = {version = "1.0.47"}
tinydb = "1"
serde = "1.0.188"
tracing = "0.1"
tracing-subscriber = "0.3"
fs4 = { version = "0.6", features = ["tokio-async"] }
csv = "1.2.2"